# rust-bringup-workshop

./: README.md  presentation.md  slides.md
clap-example/: Cargo.toml
clap-example/src/: main.rs
embassy-usage/: Cargo.toml  build.rs  memory.x
embassy-usage/.cargo/: config.toml
hello-rust/src/: lib.rs  main.rs
lifetime/src/: main.rs
nrf52840dk-hello/: Cargo.toml
nrf52840dk-hello/src/: main.rs
total/: Cargo.toml
total/src/: main.rs
