[package]
name = "embassy-usage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"

# Executes the future
embassy-executor = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy",  features = ["defmt", "integrated-timers", "nightly"] }
# Replaces nrf52840-hal for async support for spi/etc
embassy-nrf = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "time", "nightly"] }
# Helpers for time
embassy-time = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime"] }
# Helpers for future
embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy" }